feat: Add JSON serialisation support for ConstantDeclaration
Implements the write() method in ConstantDeclarationTypeAdapter to
enable serialisation of view definitions containing constants. This is
needed for generating deterministic cache keys for view export
operations.

Also adds disableHtmlEscaping() to ViewDefinitionGson to prevent
unnecessary escaping of characters like '=' in Base64 values.