@@ -53,35 +53,49 @@ import org.hl7.fhir.r4.model.UrlType;
 import org.hl7.fhir.r4.model.UuidType;
 
 /**
- * This adapter is used to deserialize a {@link ConstantDeclaration} from JSON. It looks at the
- * structure and decides which type of value it is, then instantiates the appropriate HAPI class to
- * represent it.
+ * This adapter handles serialisation and deserialisation of {@link ConstantDeclaration} objects.
+ * When reading, it looks at the structure and decides which type of value it is, then instantiates
+ * the appropriate HAPI class to represent it. When writing, it determines the type suffix from the
+ * HAPI class and writes the value in its native JSON type.
  *
  * @author John Grimes
  */
 public class ConstantDeclarationTypeAdapter extends TypeAdapter<ConstantDeclaration> {
 
-  private static final Map<String, ValueType> typeMap = new Builder<String, ValueType>()
-      .put("Base64Binary", new ValueType(Base64BinaryType.class, String.class))
-      .put("Boolean", new ValueType(BooleanType.class, Boolean.class))
-      .put("Canonical", new ValueType(CanonicalType.class, String.class))
-      .put("Code", new ValueType(CodeType.class, String.class))
-      .put("Date", new ValueType(DateType.class, String.class))
-      .put("DateTime", new ValueType(DateTimeType.class, String.class))
-      .put("Decimal", new ValueType(DecimalType.class, BigDecimal.class))
-      .put("Id", new ValueType(IdType.class, String.class))
-      .put("Instant", new ValueType(InstantType.class, String.class))
-      .put("Integer", new ValueType(IntegerType.class, int.class))
-      .put("Integer64", new ValueType(IntegerType.class, Long.class))
-      .put("Oid", new ValueType(OidType.class, String.class))
-      .put("String", new ValueType(StringType.class, String.class))
-      .put("PositiveInt", new ValueType(PositiveIntType.class, int.class))
-      .put("Time", new ValueType(TimeType.class, String.class))
-      .put("UnsignedInt", new ValueType(UnsignedIntType.class, int.class))
-      .put("Uri", new ValueType(UriType.class, String.class))
-      .put("Url", new ValueType(UrlType.class, String.class))
-      .put("Uuid", new ValueType(UuidType.class, String.class))
-      .build();
+  private static final String VALUE_PREFIX = "value";
+
+  private static final Map<String, ValueType> typeMap =
+      new Builder<String, ValueType>()
+          .put("Base64Binary", new ValueType(Base64BinaryType.class, String.class))
+          .put("Boolean", new ValueType(BooleanType.class, Boolean.class))
+          .put("Canonical", new ValueType(CanonicalType.class, String.class))
+          .put("Code", new ValueType(CodeType.class, String.class))
+          .put("Date", new ValueType(DateType.class, String.class))
+          .put("DateTime", new ValueType(DateTimeType.class, String.class))
+          .put("Decimal", new ValueType(DecimalType.class, BigDecimal.class))
+          .put("Id", new ValueType(IdType.class, String.class))
+          .put("Instant", new ValueType(InstantType.class, String.class))
+          .put("Integer", new ValueType(IntegerType.class, int.class))
+          .put("Integer64", new ValueType(IntegerType.class, Long.class))
+          .put("Oid", new ValueType(OidType.class, String.class))
+          .put("String", new ValueType(StringType.class, String.class))
+          .put("PositiveInt", new ValueType(PositiveIntType.class, int.class))
+          .put("Time", new ValueType(TimeType.class, String.class))
+          .put("UnsignedInt", new ValueType(UnsignedIntType.class, int.class))
+          .put("Uri", new ValueType(UriType.class, String.class))
+          .put("Url", new ValueType(UrlType.class, String.class))
+          .put("Uuid", new ValueType(UuidType.class, String.class))
+          .build();
+
+  // Reverse mapping from HAPI class to type name for serialisation.
+  private static final Map<Class<? extends IBase>, String> classToTypeName =
+      typeMap.entrySet().stream()
+          .collect(
+              java.util.stream.Collectors.toMap(
+                  e -> e.getValue().typeClass(),
+                  Map.Entry::getKey,
+                  // Handle duplicate classes (Integer64 uses IntegerType) - keep first.
+                  (a, b) -> a));
 
   @Override
   public ConstantDeclaration read(final JsonReader in) throws IOException {
@@ -99,15 +113,15 @@ public class ConstantDeclarationTypeAdapter extends TypeAdapter<ConstantDeclarat
 
     // Extract the value of the constant from the JSON object.
     final IBase value;
-    final List<String> valueKeys = jsonObject.keySet().stream()
-        .filter(key -> key.startsWith("value")).toList();
+    final List<String> valueKeys =
+        jsonObject.keySet().stream().filter(key -> key.startsWith(VALUE_PREFIX)).toList();
     if (valueKeys.size() != 1) {
       throw new InvalidUserInputError("Constant must have one value");
     }
 
     // Determine the type of the constant value.
-    final String valueKey = valueKeys.get(0);
-    final String typeName = valueKey.replace("value", "");
+    final String valueKey = valueKeys.getFirst();
+    final String typeName = valueKey.replace(VALUE_PREFIX, "");
     final ValueType valueType = typeMap.get(typeName);
     if (valueType == null) {
       throw new InvalidUserInputError("Unsupported constant type: " + valueKey);
@@ -120,18 +134,58 @@ public class ConstantDeclarationTypeAdapter extends TypeAdapter<ConstantDeclarat
   }
 
   @Override
-  public void write(final JsonWriter out, final ConstantDeclaration value) throws IOException {
-    throw new UnsupportedOperationException("This adapter does not support writing");
+  public void write(final JsonWriter out, final ConstantDeclaration constant) throws IOException {
+    out.beginObject();
+    out.name("name").value(constant.getName());
+
+    // Determine the type suffix and write the value.
+    final IBase value = constant.getValue();
+    final String typeSuffix = getTypeSuffix(value);
+    out.name(VALUE_PREFIX + typeSuffix);
+    writeValue(out, value);
+
+    out.endObject();
+  }
+
+  /** Gets the type suffix for a FHIR primitive value (e.g., "String", "Boolean", "Integer"). */
+  @Nonnull
+  private static String getTypeSuffix(@Nonnull final IBase value) {
+    final String typeName = classToTypeName.get(value.getClass());
+    if (typeName == null) {
+      throw new InvalidUserInputError(
+          "Unsupported constant type: " + value.getClass().getSimpleName());
+    }
+    return typeName;
+  }
+
+  /**
+   * Writes the primitive value to the JSON output in its native JSON type. Note that
+   * PositiveIntType and UnsignedIntType extend IntegerType, so they are handled by the IntegerType
+   * case.
+   */
+  private static void writeValue(@Nonnull final JsonWriter out, @Nonnull final IBase value)
+      throws IOException {
+    switch (value) {
+      case final BooleanType b -> out.value(b.getValue());
+      case final IntegerType i -> out.value(i.getValue());
+      case final DecimalType d -> out.value(d.getValue());
+      case final org.hl7.fhir.r4.model.PrimitiveType<?> p -> out.value(p.getValueAsString());
+      default ->
+          throw new InvalidUserInputError(
+              "Cannot serialise constant: " + value.getClass().getSimpleName());
+    }
   }
 
   @Nonnull
-  private static IBase getValue(@Nonnull final JsonObject jsonObject,
-      @Nonnull final String valueKey, @Nonnull final ValueType valueType) {
+  private static IBase getValue(
+      @Nonnull final JsonObject jsonObject,
+      @Nonnull final String valueKey,
+      @Nonnull final ValueType valueType) {
     final IBase value;
     try {
       // Get the constructor of the value type class.
-      final Constructor<? extends IBase> constructor = valueType.typeClass()
-          .getDeclaredConstructor(valueType.inputClass());
+      final Constructor<? extends IBase> constructor =
+          valueType.typeClass().getDeclaredConstructor(valueType.inputClass());
       final Object valueObject;
       // Determine the input class and get the value accordingly.
       if (valueType.inputClass() == Boolean.class) {
@@ -147,8 +201,10 @@ public class ConstantDeclarationTypeAdapter extends TypeAdapter<ConstantDeclarat
       }
       // Create a new instance of the value type with the extracted value.
       value = constructor.newInstance(valueObject);
-    } catch (final NoSuchMethodException | InvocationTargetException | InstantiationException |
-                   IllegalAccessException e) {
+    } catch (final NoSuchMethodException
+        | InvocationTargetException
+        | InstantiationException
+        | IllegalAccessException e) {
       // Throw a runtime exception if the value cannot be instantiated.
       throw new ConstantConstructionException(e);
     }
@@ -156,9 +212,6 @@ public class ConstantDeclarationTypeAdapter extends TypeAdapter<ConstantDeclarat
     return value;
   }
 
-  private record ValueType(@Nonnull Class<? extends IBase> typeClass,
-                           @Nonnull Class<?> inputClass) {
-
-  }
-
+  private record ValueType(
+      @Nonnull Class<? extends IBase> typeClass, @Nonnull Class<?> inputClass) {}
 }
